--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "nestjs-pagination-module": "^1.1.5",
     "nodemailer": "^6.4.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
