--- a/course-microservice/package.json
+++ b/course-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-teaching",
+  "name": "course-microservice",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,37 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/jwt": "^7.1.0",
     "@nestjs/microservices": "^7.4.4",
-    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/platform-socket.io": "^7.4.4",
-    "@nestjs/sequelize": "^0.1.1",
-    "@nestjs/websockets": "^7.4.4",
-    "@types/bcrypt": "^3.0.0",
-    "@types/nodemailer": "^6.4.0",
-    "@types/nodemailer-direct-transport": "^1.0.31",
-    "@types/nodemailer-smtp-transport": "^2.7.4",
-    "@types/socket.io": "^2.1.11",
-    "bcrypt": "^5.0.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "dayjs": "^1.9.3",
-    "dotenv": "^8.2.0",
-    "nestjs-pagination-module": "^1.1.5",
-    "nodemailer": "^6.4.13",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.4.0",
-    "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "sequelize": "^5.22.3",
-    "sequelize-typescript": "^1.1.0",
-    "socket.io": "^2.3.0"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -62,9 +37,6 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
